--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
             <textarea class="entry-review__text" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </div>
 
-          <button class="form-button" type="button">Отправить форму</button>
+          <button class="button form--button" type="button">Отправить форму</button>
         </form>
 
         <p><span class="asterisk">*</span> - обязательные поля</p>
