--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
     <main class="main-page-content">
       <div class="app-download">
-
-          <button class="download-button" type="button">Скачать приложение</button>
-
+        <a class="button download--button" href="#">Скачать приложение</a>
 
         <div class="app-download__platforms">
           <img src="">
