--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main class="main-page-content">
       <div class="app-download">
-        <a class="button download--button" href="#">Скачать приложение</a>
+        <a class="button button--download" href="#">Скачать приложение</a>
 
         <div class="app-download__platforms">
           <img src="">
