--- a/photo.html
+++ b/photo.html
@@ -161,8 +161,8 @@
         <img src="img/something.jpg" alt="Uploaded Image">
         <!-- Фильтры -->
 
-        <button class="button post--button" type="button">Запостить</a>
-        <button class="button cancel--button" type="button">Отмена</button>
+        <button class="button button--post" type="button">Запостить</a>
+        <button class="button button--cancel" type="button">Отмена</button>
       </div>
     </main>
 
