Первая попытка выполнить третье задание

--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PINK Photo</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -21,9 +22,7 @@
         </div>
       </nav>
 
-      <div class="main-header__headline">
-        <h1>Фотографии пользователей</h1>
-      </div>
+      <div class="main-header__headline-photos">Фотографии пользователей</div>
     </header>
 
     <main class="photo-content">
@@ -34,9 +33,9 @@
 
       <div class="photo-content__items">
         <div class="photo-item">
-          <div class="featured-panorama">Панорама дня</div>
+          <div class="featured-item">Панорама дня</div>
 
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/panorama-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Анна <span class="item-date">(5 минут назад)</span></p>
@@ -53,7 +52,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-1-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Левон <span class="item-date">(5 часов назад)</span></p>
@@ -70,7 +69,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-2-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Антон <span class="item-date">(12 часов назад)</span></p>
@@ -87,7 +86,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-3-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Борис <span class="item-date">(20 часов назад)</span></p>
@@ -104,7 +103,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-4-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Сергей <span class="item-date">(25 часов назад)</span></p>
@@ -121,7 +120,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-5-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Максим <span class="item-date">(40 часов назад)</span></p>
@@ -138,7 +137,7 @@
         </div>
 
         <div class="photo-item">
-          <img src="img/something.jpg" alt="Image Entry">
+          <img src="img/photo-6-mobile@1x.jpg" alt="Image Entry">
 
           <div class="photo-content__item-headline">
             <p>Надежда <span class="item-date">(45 часов назад)</span></p>
@@ -158,7 +157,7 @@
       <div class="incentive">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</div>
 
       <div class="photo-content__upload">
-        <img src="img/something.jpg" alt="Uploaded Image">
+        <img src="img/photo-7-mobile@1x.jpg" alt="Uploaded Image">
         <!-- Фильтры -->
 
         <button class="button button--post" type="button">Запостить</a>
@@ -168,7 +167,7 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="img/something.jpg" alt="Pink Logo">
+        <img src="img/logo-pink-blue-mobile.svg" alt="Pink Logo">
       </div>
 
       <div class="footer__social">
@@ -180,7 +179,7 @@
       </div>
 
       <div class="footer__produced">
-        <p>Разработано <span class="produced-image"></span></p>
+        <p>Разработано <span class="produced-image"><img src="img/logo-htmlacademy.svg"></span></p>
       </div>
     </footer>
   </body>
