--- a/photo.html
+++ b/photo.html
@@ -8,33 +8,35 @@
   </head>
 
   <body>
-    <header class="main-header">
-      <h1 class="main-header__logo">Pink</h1>
+    <div class="header-wrapper">
+      <header class="main-header-pages container">
+        <h1 class="main-header__logo">Pink</h1>
 
-      <nav class="main-nav main-nav--closed">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__items">
-            <li class="main-nav__item"><a>Главная</a></li>
-            <li class="main-nav__item main-nav__item--active"><a href="">Фотографии</a></li>
-            <li class="main-nav__item"><a href="">Конкурс</a></li>
-            <li class="main-nav__item"><a href="">HTML Academy</a></li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="main-nav main-nav--closed">
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__items">
+              <li class="main-nav__item"><a>Главная</a></li>
+              <li class="main-nav__item main-nav__item--active"><a href="">Фотографии</a></li>
+              <li class="main-nav__item"><a href="">Конкурс</a></li>
+              <li class="main-nav__item"><a href="">HTML Academy</a></li>
+            </ul>
+          </div>
+        </nav>
 
-      <div class="main-header__headline-photos">Фотографии пользователей</div>
-    </header>
+        <div class="main-header-pages__headline-photos">Фотографии пользователей</div>
+      </header>
+    </div>
 
-    <main class="photo-content">
+    <main class="photo-content container clearfix">
       <div class="photo-content__headline">
         <p>Взгляните на фотографии, которые выкладывают пользователи!</p>
         <p>Видите, как не хватает Ваших?</p>
       </div>
 
       <div class="photo-content__items">
-        <div class="photo-item">
-          <div class="featured-item">Панорама дня</div>
+        <div class="featured-item">
+          <div class="featured-item-headline">Панорама дня</div>
 
           <img src="img/panorama-mobile@1x.jpg" alt="Image Entry">
 
@@ -166,7 +168,7 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer container">
       <div class="footer__logo">
         <img src="img/logo-pink-blue-mobile.svg" alt="Pink Logo">
       </div>
